now glow tottaly collapse, please fix it (_for element span_)

--- a/src/app/io-button.css
+++ b/src/app/io-button.css
@@ -76,6 +76,7 @@
 
 .cssbuttons-io-button .dots_border {
   --size_border: calc(100% + 2px);
+  overflow: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -84,7 +85,7 @@
   height: var(--size_border);
   background-color: transparent;
   border-radius: 9999px;
-  z-index: 0;
+  z-index: -10;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
@@ -96,10 +97,10 @@
 .cssbuttons-io-button .dots_border::before {
   content: "";
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(0deg);
-  transform-origin: center;
+  transform-origin: left;
   width: 100%;
   height: 2rem;
   background-color: white;
